<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hit The Nail</string>
    <string name="NewGameButton">New game</string>
    <string name="GenerateNewGame">Restart</string>
    <string name="GoToMenu">On main</string>
    <string name="ContinueButton">Statistics</string>
    <string name="easyLevel">Easy</string>
    <string name="mediumLevel">Medium</string>
    <string name="hardLevel">Hard</string>
    <string name="NewGame">New game</string>
    <string name="Statistics">Best Score</string>
    <string name="easyStat">EASY</string>
    <string name="mediumStat">MEDIUM</string>
    <string name="hardStat">HARD</string>
    <string name="BackOnMain">Back</string>
    <string name="AppNameMain">Hit The Nail</string>
    <string name="GameWon">Game won:</string>
    <string name="totalPlayed">Total played:</string>
    <string name="HowToPlay">How to play?</string>
    <string name="tutorial">How to play</string>
    <string name="levelChoice">Game difficulty</string>
    <string name="wonText">You won! In %1$s click(s).</string>
    <string name="tutorialText">All you need to do is the hit all the nails on the playing field.
                                \nBut the game has one rule: when you hit the nail, the other nails
                                in the same row and column change their status at the opposite.
    </string>
    <string name="instruction">For example:
                               \ntry to hit the nails so that only one column and row nails stayed not hammered.</string>
    <string name="instruction2">Now hit the nail in such position, that all the other in the row and column
                                also become hammered.</string>
    <string name="instruction3">That\'s all. You won!</string>


    <!--Follow strings-->
    <string name="connection_failure">Connection error!</string>
    <string name="follow">Subscribe, buddy!</string>
    <string name="follow_button_back">Back</string>
    <string name="follow_text">More</string>
    <string name="TryOther">Try our other apps</string>
    <string name="Exit">Exit</string>
    <string name="ExitMessage">Don\'t show me this message again</string>
    <string name="Close">Close</string>
    <string name="QuitDialog">Are you really want to quit?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

</resources>
