<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="@drawable/okbg_main" android:gravity="center">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easyLevel"
            android:id="@+id/easy" android:layout_gravity="center_horizontal"
            android:onClick="onLevelChoiceClick" android:layout_marginBottom="10dp" android:background="@drawable/menubutton"
            android:textSize="20sp" android:textColor="@color/black"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mediumLevel"
            android:id="@+id/medium" android:layout_gravity="center_horizontal" android:onClick="onLevelChoiceClick"
            android:layout_marginBottom="10dp" android:background="@drawable/menubutton" android:textSize="20sp"
            android:textColor="@color/black"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardLevel"
            android:id="@+id/hard" android:layout_gravity="center_horizontal" android:onClick="onLevelChoiceClick"
            android:background="@drawable/menubutton" android:textSize="20sp"
            android:textColor="@color/black"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/BackOnMain"
            android:id="@+id/backButtonLevel" android:layout_gravity="center_horizontal" android:onClick="onLevelBackClick"
            android:background="@drawable/menubutton" android:textSize="20sp"
            android:textColor="@color/black" android:layout_marginTop="40dp"/>
</LinearLayout>