<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:gravity="center" android:weightSum="1">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/TryOther"
            android:id="@+id/Try" android:layout_gravity="center" android:textSize="20dp"
            android:paddingBottom="10dp" android:textStyle="bold"/>
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center" android:id="@+id/appsTable"
            >
    </TableLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Close"
            android:id="@+id/exitButton" style="@style/ButtonStyle"
            android:onClick="closeClick" android:layout_marginTop="20dp" android:layout_gravity="center"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/ExitMessage"
            android:id="@+id/MessageCheckBox" android:layout_gravity="center" android:textSize="12dp"
            android:layout_margin="10dp" android:checked="false"/>
</LinearLayout>