<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:id="@+id/main_layout"
             android:orientation="vertical"
              android:background="@drawable/okbg_main" android:gravity="center">
    <ToggleButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/soundSwitcher" android:layout_gravity="left" android:layout_marginLeft="20dp"
            android:background="@drawable/toogle" android:textOff=" " android:textOn=" "
            android:onClick="soundOffOn"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/gameText" android:layout_gravity="center"
            android:textColor="@color/black" android:textSize="20dp" android:text="0"/>
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/main_table"
            android:padding="20dp">
    </TableLayout>
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center" android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:id="@+id/row1"
                >
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NewGame"
                    android:id="@+id/buttonNewGame" android:nestedScrollingEnabled="false"
                    android:onClick="inGameNewGameClick" android:layout_marginBottom="10dp" android:background="@drawable/menubutton"
                    android:textSize="20sp" android:textColor="@color/black"
                    android:layout_weight="1"/>
        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:id="@+id/row2"
                >
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GenerateNewGame"
                    android:id="@+id/generateNewGame"
                    android:onClick="restartClick" android:layout_marginRight="5dp" android:background="@drawable/menubutton"
                    android:textSize="20sp" android:textColor="@color/black"
                    android:layout_weight="1" android:layout_gravity="center_horizontal"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GoToMenu"
                    android:id="@+id/goToMenu" android:layout_gravity="center_horizontal" android:onClick="inGameToMainClick"
                    android:nestedScrollingEnabled="false" android:layout_marginLeft="5dp" android:background="@drawable/menubutton"
                    android:textSize="20sp" android:textColor="@color/black"
                    android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
</LinearLayout>

